--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "lint": "eslint src --ext .ts,.tsx"
   },
   "dependencies": {
+    "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
@@ -29,6 +31,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@vitejs/plugin-react": "^3.1.0",
     "babel-jest": "^29.5.0",
     "eslint": "^8.37.0",
