--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -21,10 +21,10 @@ jobs:
         run: npm install 
 
       - name: Linting
-        run: npm lint
+        run: npm run lint
 
       - name: Typecheck
-        run: npm typecheck
+        run: npm run typecheck
 
       - name: Test
-        run: npm test:ci
+        run: npm runtest:ci
