--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -28,3 +28,14 @@ jobs:
 
       - name: Test
         run: npm run test:ci
+
+      - name: Building
+        run: npm run build
+
+      - name: Install Vercel CLI
+        run: npm install -g vercel  
+
+      - name: Deploy
+        env: 
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+        run: vercel --prod
