--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -37,6 +37,6 @@ jobs:
 
       - name: Deploy
         env: 
-          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-        run: vercel --prod
+        run: vercel --prod --token ${{ secrets.VERCEL_TOKEN }}
+       
