--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -38,5 +38,6 @@ jobs:
       - name: Deploy
         env: 
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
         run: vercel --prod --token ${{ secrets.VERCEL_TOKEN }}
        
